--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -595,134 +595,31 @@
                                         <input type="radio" name="pro_filter" lay-filter="pro_filter" lay-skin="primary" value="3"  title="关键字">
                                     </td>
                                 </tr>
-                                <tr class="task_time" style="display: none">
-                                    <td class="yty_tdleft">任务时间 :</td>
-                                    <td class="yty_tdright">
-                                        <input type="text" name="task_time_start" id="task_time_start" placeholder="" autocomplete="off" class="layui-input"> — <input type="text" name="task_time_end" id="task_time_end" placeholder="" autocomplete="off" class="layui-input input-margin">
-                                    </td>
-                                </tr>
-
                                 <tr>
-                                    <td class="yty_tdleft"> 发送时间 :</td>
+                                    <td class="yty_tdleft"> 人群画像 :</td>
                                     <td class="yty_tdright">
-                                        每天 <input type="text" name="day_hour_start" id="day_hour_start" placeholder="" autocomplete="off" class="layui-input"> 时 至
-                                        <input type="text" name="day_hour_end" id="day_hour_end" placeholder="" autocomplete="off" class="layui-input">
-                                        时，发送关怀提醒 (其他时间自动延迟到次日发送)
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        <input type="radio" name="date_notice_switch" lay-filter="date_notice_switch" value="1" title="超出时间次日通知" checked="">
-                                        <input type="radio" name="date_notice_switch" lay-filter="date_notice_switch" value="0" title="超出时间不发送">
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-                                        <input type="checkbox" name="lunch_hour_switch" lay-skin="primary"  title="" checked="">
-                                        午休时间 <input type="text" name="day_hour_start" id="siesta_hour_start" placeholder="" autocomplete="off" class="layui-input"> 时 至
-                                        <input type="text" name="day_hour_end" id="siesta_hour_end" placeholder="" autocomplete="off" class="layui-input">
-                                        不发送
-                                        <i class="fa fa-question-circle tips-icon" title-icon="为避免午休时间内打扰客户休息，可选择午休时间通知短信自动顺延发送，勾选则顺延发送。"></i>
-                                        <!--为避免午休时间内打扰客户休息，可选择午休时间通知短信自动顺延发送，勾选则顺延发送。-->
+                                        <input type="checkbox" name="crowd_portrait_type[]" lay-filter="crowd_portrait_type" lay-skin="primary" value="0"  title="不限" checked>
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="1"  title="学生">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="2"  title="IT">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="3"  title="金融族">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="4"  title="白领">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="5"  title="公务员">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="5"  title="家居族">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="5"  title="医护人员">
+                                        <input type="checkbox" name="crowd_portrait_type[]"  lay-filter="crowd_portrait_type" lay-skin="primary" value="5"  title="其他">
                                     </td>
                                 </tr>
-
                                 <tr>
-                                    <td class="yty_tdleft"> 关怀条件 :</td>
+                                    <td class="yty_tdleft"> 已发短信过滤 :</td>
                                     <td class="yty_tdright">
-                                        <input type="checkbox" name="care_swicht" lay-skin="primary"  title="" checked="">
-                                        实付金额 <input type="number" value="0.00" min="0" name="actually_paid_start" id="actually_paid_start" placeholder="" autocomplete="off" class="layui-input"> —
-                                        <input type="number" min="0" value="0.00" name="actually_paid_end" id="actually_paid_end" placeholder="" autocomplete="off" class="layui-input">元
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        <input type="checkbox" name="goods_switch" lay-skin="primary"  title="" checked="">
-                                        商品数量 <input type="number" value="0" min="0" name="number_of_products_start" id="number_of_products_start" placeholder="" autocomplete="off" class="layui-input"> —
-                                        <input type="number" min="0" value="" name="number_of_products_end" id="number_of_products_end" placeholder="" autocomplete="off" class="layui-input">件
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        <div class="layui-inline yty-form">
-                                        <span>订单中</span>
-                                            <div class="layui-input-inline">
-                                            <select name="modules" lay-verify="required" lay-search=""><option value="1">包含</option><option value="0">不包含</option></select>
-                                            </div>
-                                        <span>指定商品</span>
-                                            <button type="button" name="" id="" placeholder="" autocomplete="off" class="layui-btn layui-btn-sm  layui-btn-primary">默认不选择商品</button>
-                                        </div>
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-                                        <input type="checkbox" name="order_type_switch" lay-skin="primary"  title="" checked="">订单类型为<span style="color: #FF5722">货到付款</span>时才发送提醒
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td class="yty_tdleft"> 过滤设置 :</td>
-                                    <td class="yty_tdright">
-                                        <input type="checkbox" name="filter_set_switch" lay-skin="primary"  title="" checked="">
-                                        <div class="layui-inline yty-form">
-                                            <span>不发送</span>
-                                            <div class="layui-input-inline">
-                                                <select name="modules" lay-verify="required" lay-search="">
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3" selected>3</option>
-                                                    <option value="4">4</option>
-                                                    <option value="5">5</option>
-                                                </select>
-                                            </div>
-                                            <span>天内有过付款的客户</span>
-                                        </div>
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        <input type="checkbox" name="not_flag_switch" lay-skin="primary"  title="" checked="">
-                                        不发送标旗订单
-                                        <div class="layui-inline yty-form">
-                                        <ul class="yty-checkbox">
-                                            <li class="checkbox-active"><span class="red_flag"></span></li>
-                                            <li><span class="yellow_flag"></span></li>
-                                            <li><span class="cyan_flag"></span></li>
-                                            <li><span class="blue_flag"></span></li>
-                                            <li><span class="purple_flag"></span></li>
-                                        </ul>
-                                        </div>
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        <input type="checkbox" name="not_send_order_switch" lay-skin="primary"  title="" checked="">
-                                        不发送订单来源
-                                        <input type="checkbox" name="order_from[pc]" lay-skin="primary"  title="PC端">
-                                        <input type="checkbox" name="order_from[mobile]" lay-skin="primary"  title="移动端">
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        <input type="checkbox" name="area_switch" lay-skin="primary"  title="" checked="">当收货地区是
-                                        <input type="text" name="shipping_address" id="shipping_address" placeholder="" autocomplete="off" class="layui-input"> 时,短信不提醒！
-                                        <br>
-                                        <p class="marginbuttom5"></p>
-
-                                        不发送黑名单客户 <a href="javascript:void(0);" class="astyle set_black">设置黑名单</a>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td class="yty_tdleft"> 赠送礼品 :</td>
-                                    <td class="yty_tdright">
-                                        <input type="checkbox" name="gift_switch" lay-skin="primary"  title="" checked="">
-                                        <div class="layui-inline yty-form">
-                                            <span>赠送流量</span>
-                                            <a href="javascript:void(0);" class="astyle">选择流量卡 </a>
-                                            <a href="javascript:void(0);" class="astyle">流量充值 </a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr class="yty-form">
-                                    <td class="yty_tdleft"> 短信内容 :</td>
-                                    <td class="yty_tdright">
-                                        <div class="layui-inline layui-form">
-                                            <textarea placeholder="请输入内容" class="layui-textarea yty-textarea sms-content-last" readonly>注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</textarea>
-                                            <a href="javascript:void(0);" class="astyle sms-event">修改短信内容</a>
-                                            <a href="javascript:void(0);" class="astyle sms_record">短信测试记录</a>
-                                        </div>
+                                        <input type="radio" name="fitler_date" lay-filter="fitler_date" value="0" title="今天" checked>
+                                        <input type="radio" name="fitler_date" lay-filter="fitler_date" value="1" title="近3天">
+                                        <input type="radio" name="fitler_date" lay-filter="fitler_date" value="2" title="近7天">
+                                        <input type="radio" name="fitler_date" lay-filter="fitler_date" value="3" title="近15天">
+                                        <input type="radio" name="fitler_date" lay-filter="fitler_date" value="4" title="自定义">
+                                        <span class="customize_fitler_date" style="display: none">
+                                            近 <input type="number" name="customize_fitler_date" id="customize_fitler_date" placeholder="" autocomplete="off" class="layui-input"> 天
+                                        </span>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -1366,6 +1263,17 @@
                 $(".customize_avg_price").show()
             }else(
                 $(".customize_avg_price").hide()
+            )
+        });
+
+        /**
+         * 已发短信过滤事件监听
+         * */
+        form.on('radio(fitler_date)', function(data){
+            if(data.value == 4){
+                $(".customize_fitler_date").show()
+            }else(
+                $(".customize_fitler_date").hide()
             )
         });
 
