--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2543,3 +2543,12 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 .marginbuttom10{
     margin-bottom: 10px;
 }
+
+.width250{
+    width: 300px !important;
+}
+
+.btn-primary-border{
+    border: 1px solid #506def;
+    color: #506def;
+}
